{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "169fb164-b0f6-4d67-b548-38dedab14842",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "a076c791-d544-4d42-967b-b1006381763f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Hold",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "6429a872-1ceb-4dc4-9169-43e0c292f305",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "BasicAttack",
                    "type": "Button",
                    "id": "3f8db4bb-9829-4bf6-abda-7ed8bab8d04a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Ability1",
                    "type": "Button",
                    "id": "8848617d-4f46-4345-9b53-a71d6ea37c09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability2",
                    "type": "Button",
                    "id": "40262494-fa89-4f2f-b993-9aa3843a5fa6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability3",
                    "type": "Button",
                    "id": "cf464fc8-18e9-4d89-a3a6-ea589c135b92",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ability4",
                    "type": "Button",
                    "id": "187673a4-dcc9-4e26-bb98-1de8de87d1c3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "985f1cc0-3f2f-43d3-b3ef-53449599b99a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SwitchMode",
                    "type": "Button",
                    "id": "21e7dcd3-5ee7-45e4-8b57-c692d4cd37af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "82357f3d-6682-4ddd-8327-5a83d4aab7a1",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c403ae13-6d7a-4990-b13b-c9ccf40ca4d0",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "60b3340d-e39b-43c0-a9ae-60163a3ccbb7",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "846d1937-92fb-47bc-9e81-b9032b34885c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3dca7465-b0d6-46ab-a784-5f1ed9e51022",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "00f781ed-b0c4-4cff-b350-fba6873be3af",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7c670266-6a5f-4c4d-81ae-11f5e6e541b0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c761f5a5-4a8a-47fb-be9e-6e92e3a7e07b",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d436419-e1f8-464d-9a55-c4920beddf4a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "21b495f8-75f5-4749-9041-3f9430f37530",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5ee5dd05-0002-4ed9-b422-8b16f7806ea0",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2a1dff67-fa1a-41bc-afb0-cabac4bce295",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "99141acd-c412-43b0-aba0-887195cbd342",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6d1d1e0-ec70-484f-8e81-7fafa958679e",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "820bedfe-e146-4384-b599-a2c6685a6643",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0249b571-1664-4bb5-b5fc-569f0b58a9f5",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ability4",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4df0090-6b90-42bf-b272-ccdcd2caf14b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "80fd5747-49a9-4c2c-8687-b68d819224d6",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "26558958-f5ff-4479-b657-a62341139637",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}